--- a/combi/style.css
+++ b/combi/style.css
@@ -33,9 +33,12 @@
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.output p {
+  margin-bottom: 10px;
+}
 .demonstration {
   padding: 10px;
-  font-size: 14px;
+  font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .demonstration p {
