--- a/style.css
+++ b/style.css
@@ -38,25 +38,28 @@ body {
 }
 
 .content {
-  margin-top: 3vh;
+  margin-top: 10vh;
+  width: 40%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
-.content a {
-  display: block;
-  width: 7vw;
-  height: 7vw;
-  padding: 20px;
-  text-decoration: none;
+.content button {
+  width: 100px;
+  height: 100px;
   border-radius: 100%;
+  border: none;
   background: #d81681;
   box-shadow: inset 4px 2px 3px rgba(255, 255, 255, 0.4);
-  color: white;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
-  text-align: center;
-  line-height: 4vw;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.content a {
   text-shadow: 4px 2px 3px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+
+  margin: 0 auto;
+  color: white;
 }
