--- a/style.css
+++ b/style.css
@@ -7,17 +7,8 @@ body {
   width: 100%;
   height: 100%;
   background-image: url("images/main.jpg");
-  background-size: 100%;
-  animation: largen 5s;
-}
-
-@keyframes largen {
-  from {
-    background-size: 110%;
-  }
-  to {
-    background-size: 100%;
-  }
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
@@ -62,4 +53,53 @@ body {
 
   margin: 0 auto;
   color: white;
+}
+
+@media screen and (max-width: 552px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background: white;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo {
+    width: 25%;
+    height: 30%;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .content {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  .content button {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 1vh;
+    border-radius: 100%;
+    border: none;
+    background: #d81681;
+    box-shadow: inset 4px 2px 3px rgba(255, 255, 255, 0.4);
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .content a {
+    text-shadow: 4px 2px 3px rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+
+    margin: 0 auto;
+    color: white;
+  }
 }
